--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">XkdcApp</string>
     <string name="search_hint">Search</string>
+    <string name="share">Share</string>
     <string name="explanation">Explanation</string>
     <string name="server_error_dialog_title">Server Error</string>
     <string name="server_error_dialog_message">Communication with the server failed</string>
